# movies_admin

./: .gitignore  pyproject.toml  requirements.txt
config/: .env  .env.template  settings.py  urls.py
movies/: admin.py  apps.py  models.py  serializers.py  signals.py
movies/api/v1/: views.py
movies/api/v1/arh/: views.py  views.py.bak
movies/example/: connection01.py
movies/migrations/: 0001_initial.py  0002_alter_filmwork_type.py  0002_alter_genre_options_alter_person_options_and_more.py  0002_alter_genrefilmwork_unique_together_and_more.py  0002_filmwork_persons.py  0003_alter_filmwork_certificate.py  0003_alter_personfilmwork_film_work.py  0003_genrefilmwork_modified_personfilmwork_modified_and_more.py  0004_alter_filmwork_rating.py  0004_alter_personfilmwork_film_work.py  0005_alter_personfilmwork_person.py  0005_remove_genrefilmwork_modified_filmwork_genres.py  0006_alter_personfilmwork_film_work.py  0006_remove_personfilmwork_modified.py  0007_filmwork_certificate_filmwork_file_path.py  0008_alter_filmwork_title.py  0009_alter_filmwork_certificate_and_more.py
movies/scripts/: ExtractDay-F.py  QuerySet01.py  aggregate.py  bulk_create.py  bulk_update.py  connection01.py  create.py  create_film.py  prefetch_related-00.py  prefetch_related-01.py  q-filter01.py  raw.py  transaction-atomic.py  transaction-on_commit.py  transaction_select_for_update.py  transactions-nested.py  update01.py
movies/scripts/sql/: ExtractDay-F.sql  filmwork__person__full_name.sql  filter01.sql  prefetch_related-01.sql  q-filter01.txt  sql-filter01.txt
(+2 files in other folders)
