[tool.poetry]
name = "movies-admin"
version = "0.1.0"
description = ""
authors = ["lynx <diaamantkia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.11"
flake8 = "6.1.0"
python-dotenv = "1.0.1"
psycopg2-binary = "^2.9.9"
django-split-settings = "^1.3.0"
django-extensions = "^3.2.3"
black = "^24.3.0"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
